--- a/Steganalysis/Steganalysis.csproj
+++ b/Steganalysis/Steganalysis.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChiSquare.cs" />
+    <Compile Include="ChiSquareTest.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,13 +63,23 @@
       <DependentUpon>LSB1.cs</DependentUpon>
     </Compile>
     <Compile Include="Lsb1Analis.cs" />
+    <Compile Include="LSB2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LSB2.Designer.cs">
+      <DependentUpon>LSB2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RSAnalysis.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LSB1.resx">
       <DependentUpon>LSB1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LSB2.resx">
+      <DependentUpon>LSB2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
