--- a/Steganalysis/Steganalysis.csproj
+++ b/Steganalysis/Steganalysis.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Koch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Koch.Designer.cs">
+      <DependentUpon>Koch.cs</DependentUpon>
+    </Compile>
     <Compile Include="LSB1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,8 +78,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RSAnalysis.cs" />
+    <Compile Include="ZhaoKoch.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Koch.resx">
+      <DependentUpon>Koch.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LSB1.resx">
       <DependentUpon>LSB1.cs</DependentUpon>
